styling fix to make commenting more friendly on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -291,12 +291,12 @@ input.ng-valid:not(.ng-pristine) {
 }
 
 .commentSubmit {
-  width: 700px;
+  width: 100%;
   margin-top: 20px;
 }
 
 .commentSubmit textarea {
-  width: 700px;
+  width: 100%;
   height: 100px;
   float: left;
   resize: none;
